# aviz-application

./: README.md
app-flutter/: pubspec.yaml
app-flutter/lib/: main.dart
app-flutter/lib/DI/: di.dart
app-flutter/lib/Utils/: formdata_builder.dart  int_extention.dart
app-flutter/lib/components/: category_button.dart  custom_button.dart  detail_screen_components.dart  horizontal_cart.dart  vertical_cart.dart
app-flutter/lib/networks/: api_exeption.dart  dio_provider.dart
app-flutter/lib/settings/: settings.dart
back-django/: manage.py  pyproject.toml  requirements.txt
back-django/Aviz/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
back-django/Aviz/custom_settings/: celery_setting.py  email_setting.py  jazzmin_setting.py  rest_setting.py
back-django/apps/account_app/: apps.py  decorators.py  managers.py  models.py  serializer.py  urls.py  utils.py  views.py
back-django/apps/account_app/migrations/: 0001_initial.py
back-django/apps/ad_app/: admin.py  apps.py  decorators.py  forms.py  models.py  serializer.py  service.py  urls.py  views.py
back-django/apps/ad_app/migrations/: 0001_initial.py  0002_avizfacilities_aviz_avizposter.py  0003_aviz_category_alter_avizfacilities_title.py  0004_alter_aviz_category.py  0005_alter_aviz_year_of_construction.py  0006_aviz_call_available_aviz_chat_available.py  0007_aviz_is_location_allowed_aviz_latitude_and_more.py  0008_alter_aviz_price_alter_aviz_price_per_meter.py  0009_alter_aviz_description_alter_aviz_floor_and_more.py
back-django/utils/: custom_exeption.py  email.py
(+62 files in other folders)
